# sentinelx-cloud-protocol

./: .gitignore  CHANGELOG.md  LICENSE  README.md  messages.md  pyproject.toml
.github/workflows/: ci.yml
python/sentinelx_protocol/: __init__.py  messages.py
tests/: test_sanity.py
