[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinelx-protocol"
version = "1.0.0"
description = "SentinelX wire protocol — shared contract between core and hub"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Pensados" }]
dependencies = [
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["python/sentinelx_protocol"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
